
[AutoMsgID Codec:"gogopb" Service: "game" RouteRule: "auth"]
struct ChatREQ {
	Content string
}

[AutoMsgID Codec:"gogopb"]
struct ChatACK{
	Content string
}



[AutoMsgID Codec:"gogopb"]
struct TestACK{
	Dummy string
}
